# fastapi-example

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: render.py  template.py
app/config/: config.py
app/models/: __init__.py  template.py
app/templates/: pddd.html
app/utils/: render.py
