[tool.poetry]
name = "fastapi-tut"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Surikhin <surikhin.k@light-it.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.68.0,<0.69.0"
pydantic = "<2.0.0"
uvicorn = "<0.16.0"
beanie = "^1.21.0"
motor = "^3.2.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
